lkt/bootstrap/src/liblktlang.h

/*
 * This type represents a context for all source analysis. This is the first
 * type you need to create to use liblktlang. It will contain the results of
 * all analysis, and is the main holder for all the data.
 *
 * You can create several analysis contexts if you need to, which enables you,
 * for example to:
 *
 * * analyze several different projects at the same time;
 *
 * * analyze different parts of the same projects in parallel.
 *
 * In the current design, contexts always keep all of their analysis units
 * allocated. If you need to get this memory released, the only option at your
 * disposal is to destroy your analysis context instance.
 *
 * This structure is partially opaque: some fields are exposed to allow direct
 * access, for performance concerns.
 */
typedef struct
{
   uint64_t serial_number;
} *lkt_analysis_context;
/*
 * This type represents the analysis of a single file.
 *
 * This type has strong-reference semantics and is ref-counted. Furthermore, a
 * reference to a unit contains an implicit reference to the context that owns
 * it. This means that keeping a reference to a unit will keep the context and
 * all the unit it contains allocated.
 *
 * This structure is partially opaque: some fields are exposed to allow direct
 * access, for performance concerns.
 */
typedef struct
{
   uint64_t version_number;
} *lkt_analysis_unit;
/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef struct lkt_base_node__struct *lkt_base_node;
/*
 * Type to contain Unicode text data.
 */
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *lkt_string_type;
typedef uint8_t lkt_bool;
typedef struct
{
   uint64_t version;
} *lkt_token_data_handler;
/*
 * Reference to a token in an analysis unit.
 */
typedef struct {
    /* Private data associated to this token, including stale reference
       checking data, or NULL if this designates no token.  */
    lkt_analysis_context context;
    lkt_token_data_handler token_data;

    /* Internal identifiers for this token.  */
    int token_index, trivia_index;
} lkt_token;
   /*
    * Specify a kind of analysis unit. Specification units provide an interface
    * to the outer world while body units provide an implementation for the
    * corresponding interface.
    */
   typedef enum {
      LKT_COMPLETION_ITEM_KIND_TEXT_KIND, LKT_COMPLETION_ITEM_KIND_METHOD_KIND, LKT_COMPLETION_ITEM_KIND_FUNCTION_KIND, LKT_COMPLETION_ITEM_KIND_CONSTRUCTOR_KIND, LKT_COMPLETION_ITEM_KIND_FIELD_KIND, LKT_COMPLETION_ITEM_KIND_VARIABLE_KIND, LKT_COMPLETION_ITEM_KIND_CLASS_KIND, LKT_COMPLETION_ITEM_KIND_INTERFACE_KIND, LKT_COMPLETION_ITEM_KIND_MODULE_KIND, LKT_COMPLETION_ITEM_KIND_PROPERTY_KIND, LKT_COMPLETION_ITEM_KIND_UNIT_KIND, LKT_COMPLETION_ITEM_KIND_VALUE_KIND, LKT_COMPLETION_ITEM_KIND_ENUM_KIND, LKT_COMPLETION_ITEM_KIND_KEYWORD_KIND, LKT_COMPLETION_ITEM_KIND_SNIPPET_KIND, LKT_COMPLETION_ITEM_KIND_COLOR_KIND, LKT_COMPLETION_ITEM_KIND_FILE_KIND, LKT_COMPLETION_ITEM_KIND_REFERENCE_KIND, LKT_COMPLETION_ITEM_KIND_FOLDER_KIND, LKT_COMPLETION_ITEM_KIND_ENUM_MEMBER_KIND, LKT_COMPLETION_ITEM_KIND_CONSTANT_KIND, LKT_COMPLETION_ITEM_KIND_STRUCT_KIND, LKT_COMPLETION_ITEM_KIND_EVENT_KIND, LKT_COMPLETION_ITEM_KIND_OPERATOR_KIND, LKT_COMPLETION_ITEM_KIND_TYPE_PARAMETER_KIND
   } lkt_completion_item_kind;
        



    typedef struct {
            lkt_internal_metadata md;
            lkt_env_rebindings_type rebindings;
            lkt_bool from_rebound;
    } lkt_internal_entity_info;
        



    typedef struct {
            lkt_base_node node;
            lkt_internal_entity_info info;
    } lkt_node;
        



/*
 * Return the first token used to parse this node.
 */
extern int lkt_lkt_node_token_start(
    lkt_node *node,


    lkt_token *value_p
);
        



/*
 * Return the last token used to parse this node.
 */
extern int lkt_lkt_node_token_end(
    lkt_node *node,


    lkt_token *value_p
);
        



/*
 * Return the 0-based index for Node in its parent's children.
 */
extern int lkt_lkt_node_child_index(
    lkt_node *node,


    int *value_p
);
        



/*
 * Return the node's previous sibling, or null if there is no such sibling.
 */
extern int lkt_lkt_node_previous_sibling(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the node's next sibling, or null if there is no such sibling.
 */
extern int lkt_lkt_node_next_sibling(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the analysis unit owning this node.
 */
extern int lkt_lkt_node_unit(
    lkt_node *node,


    lkt_analysis_unit *value_p
);
        



/*
 * Return whether the node is a ghost.
 *
 * Unlike regular nodes, ghost nodes cover no token in the input source: they
 * are logically located instead between two tokens. Both the ``token_start``
 * and the ``token_end`` of all ghost nodes is the token right after this
 * logical position.
 */
extern int lkt_lkt_node_is_ghost(
    lkt_node *node,


    lkt_bool *value_p
);
        



/*
 * Return a string containing the filename + the sloc in GNU conformant format.
 * Useful to create diagnostics from a node.
 */
extern int lkt_lkt_node_full_sloc_image(
    lkt_node *node,


    lkt_string_type *value_p
);
        



/*
 * Convert a CompletionItemKind enum to its corresponding integer value.
 */
extern int lkt_lkt_node_completion_item_kind_to_int(
    lkt_node *node,

        
        lkt_completion_item_kind
        kind,

    int *value_p
);
        



/*
 * Enable or disable the solver traces for debugging purposes.
 */
extern int lkt_lkt_node_p_set_solver_debug_mode(
    lkt_node *node,

        
        lkt_bool
        enable,

    lkt_bool *value_p
);
        



/*
 * Unit method. Return the ``BasicTrait`` builtin generic trait.
 */
extern int lkt_lkt_node_p_basic_trait_gen(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``BasicTrait`` builtin trait.
 */
extern int lkt_lkt_node_p_basic_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``Node`` builtin generic trait.
 */
extern int lkt_lkt_node_p_node_gen_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``Node`` builtin trait.
 */
extern int lkt_lkt_node_p_node_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``Node`` builtin generic trait.
 */
extern int lkt_lkt_node_p_indexable_gen_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``Node`` builtin trait.
 */
extern int lkt_lkt_node_p_indexable_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``TokenNode`` builtin trait.
 */
extern int lkt_lkt_node_p_token_node_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ``ErrorNode`` builtin trait.
 */
extern int lkt_lkt_node_p_error_node_trait(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the character builtin type.
 */
extern int lkt_lkt_node_p_char_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the integer builtin type.
 */
extern int lkt_lkt_node_p_int_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the boolean builtin type.
 */
extern int lkt_lkt_node_p_bool_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the big integer builtin type.
 */
extern int lkt_lkt_node_p_bigint_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the string builtin type.
 */
extern int lkt_lkt_node_p_string_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the string builtin type.
 */
extern int lkt_lkt_node_p_symbol_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the property error builtin type.
 */
extern int lkt_lkt_node_p_property_error_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the regexp builtin type.
 */
extern int lkt_lkt_node_p_regexp_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the logicvar builtin type.
 */
extern int lkt_lkt_node_p_entity_gen_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the logicvar builtin type.
 */
extern int lkt_lkt_node_p_entity_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the logicvar builtin type.
 */
extern int lkt_lkt_node_p_logicvar_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the logicvar builtin type.
 */
extern int lkt_lkt_node_p_equation_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the array builtin generic type.
 */
extern int lkt_lkt_node_p_array_gen_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the array builtin type.
 */
extern int lkt_lkt_node_p_array_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ASTList builtin generic type.
 */
extern int lkt_lkt_node_p_astlist_gen_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the ASTList builtin type.
 */
extern int lkt_lkt_node_p_astlist_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the NodeBuilder builtin generic type.
 */
extern int lkt_lkt_node_p_node_builder_gen_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Unit method. Return the NodeBuilder builtin type.
 */
extern int lkt_lkt_node_p_node_builder_type(
    lkt_node *node,


    lkt_node *value_p
);