lkt/bootstrap/src/liblktlang-implementation-c.ads


      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_token_start";
   --  Return the first token used to parse this node.

           
   

   
   

   function lkt_lkt_node_token_end
     (Node : lkt_node_Ptr;


      Value_P : access lkt_token) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_token_end";
   --  Return the last token used to parse this node.

           
   

   
   

   function lkt_lkt_node_child_index
     (Node : lkt_node_Ptr;


      Value_P : access int) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_child_index";
   --  Return the 0-based index for Node in its parent's children.

           
   

   
   

   function lkt_lkt_node_previous_sibling
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_previous_sibling";
   --  Return the node's previous sibling, or null if there is no such sibling.

           
   

   
   

   function lkt_lkt_node_next_sibling
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_next_sibling";
   --  Return the node's next sibling, or null if there is no such sibling.

           
   

   
   

   function lkt_lkt_node_unit
     (Node : lkt_node_Ptr;


      Value_P : access lkt_analysis_unit) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_unit";
   --  Return the analysis unit owning this node.

           
   

   
   

   function lkt_lkt_node_is_ghost
     (Node : lkt_node_Ptr;


      Value_P : access lkt_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_is_ghost";
   --  Return whether the node is a ghost.
   --
   --  Unlike regular nodes, ghost nodes cover no token in the input source:
   --  they are logically located instead between two tokens. Both the
   --  ``token_start`` and the ``token_end`` of all ghost nodes is the token
   --  right after this logical position.

           
   

   
   

   function lkt_lkt_node_full_sloc_image
     (Node : lkt_node_Ptr;


      Value_P : access lkt_string_type) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_full_sloc_image";
   --  Return a string containing the filename + the sloc in GNU conformant
   --  format. Useful to create diagnostics from a node.

           
   

   
   

   function lkt_lkt_node_completion_item_kind_to_int
     (Node : lkt_node_Ptr;

         Kind :
            
            lkt_completion_item_kind;

      Value_P : access int) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_completion_item_kind_to_int";
   --  Convert a CompletionItemKind enum to its corresponding integer value.

           
   

   
   

   function lkt_lkt_node_p_set_solver_debug_mode
     (Node : lkt_node_Ptr;

         Enable :
            
            lkt_bool;

      Value_P : access lkt_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_set_solver_debug_mode";
   --  Enable or disable the solver traces for debugging purposes.

           
   

   
   

   function lkt_lkt_node_p_basic_trait_gen
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_basic_trait_gen";
   --  Unit method. Return the ``BasicTrait`` builtin generic trait.

           
   

   
   

   function lkt_lkt_node_p_basic_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_basic_trait";
   --  Unit method. Return the ``BasicTrait`` builtin trait.

           
   

   
   

   function lkt_lkt_node_p_node_gen_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_node_gen_trait";
   --  Unit method. Return the ``Node`` builtin generic trait.

           
   

   
   

   function lkt_lkt_node_p_node_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_node_trait";
   --  Unit method. Return the ``Node`` builtin trait.

           
   

   
   

   function lkt_lkt_node_p_indexable_gen_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_indexable_gen_trait";
   --  Unit method. Return the ``Node`` builtin generic trait.

           
   

   
   

   function lkt_lkt_node_p_indexable_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_indexable_trait";
   --  Unit method. Return the ``Node`` builtin trait.

           
   

   
   

   function lkt_lkt_node_p_token_node_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_token_node_trait";
   --  Unit method. Return the ``TokenNode`` builtin trait.

           
   

   
   

   function lkt_lkt_node_p_error_node_trait
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_error_node_trait";
   --  Unit method. Return the ``ErrorNode`` builtin trait.

           
   

   
   

   function lkt_lkt_node_p_char_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_char_type";
   --  Unit method. Return the character builtin type.

           
   

   
   

   function lkt_lkt_node_p_int_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_int_type";
   --  Unit method. Return the integer builtin type.

           
   

   
   

   function lkt_lkt_node_p_bool_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_bool_type";
   --  Unit method. Return the boolean builtin type.

           
   

   
   

   function lkt_lkt_node_p_bigint_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_bigint_type";
   --  Unit method. Return the big integer builtin type.

           
   

   
   

   function lkt_lkt_node_p_string_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_string_type";
   --  Unit method. Return the string builtin type.

           
   

   
   

   function lkt_lkt_node_p_symbol_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_symbol_type";
   --  Unit method. Return the string builtin type.

           
   

   
   

   function lkt_lkt_node_p_property_error_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_property_error_type";
   --  Unit method. Return the property error builtin type.

           
   

   
   

   function lkt_lkt_node_p_regexp_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_regexp_type";
   --  Unit method. Return the regexp builtin type.

           
   

   
   

   function lkt_lkt_node_p_entity_gen_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_entity_gen_type";
   --  Unit method. Return the logicvar builtin type.

           
   

   
   

   function lkt_lkt_node_p_entity_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_entity_type";
   --  Unit method. Return the logicvar builtin type.

           
   

   
   

   function lkt_lkt_node_p_logicvar_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_logicvar_type";
   --  Unit method. Return the logicvar builtin type.

           
   

   
   

   function lkt_lkt_node_p_equation_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_equation_type";
   --  Unit method. Return the logicvar builtin type.

           
   

   
   

   function lkt_lkt_node_p_array_gen_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_array_gen_type";
   --  Unit method. Return the array builtin generic type.

           
   

   
   

   function lkt_lkt_node_p_array_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_array_type";
   --  Unit method. Return the array builtin type.

           
   

   
   

   function lkt_lkt_node_p_astlist_gen_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_astlist_gen_type";
   --  Unit method. Return the ASTList builtin generic type.

           
   

   
   

   function lkt_lkt_node_p_astlist_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_astlist_type";
   --  Unit method. Return the ASTList builtin type.

           
   

   
   

   function lkt_lkt_node_p_node_builder_gen_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int

      with Export        => True,
           Convention    => C,
           External_name => "lkt_lkt_node_p_node_builder_gen_type";
   --  Unit method. Return the NodeBuilder builtin generic type.

           
   

   
   

   function lkt_lkt_node_p_node_builder_type
     (Node : lkt_node_Ptr;


      Value_P : access lkt_node) return int
